<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight">

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.popularmovies2.MainActivity">


        <!--Movie Title-->
        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/title_placeholder"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_view_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Movie Poster-->
        <ImageView
            android:id="@+id/image_view_detail"
            android:layout_width="198dp"
            android:layout_height="300dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:background="@color/colorAccent"
            android:padding="1dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <!--Movie Summary-->
        <TextView
            android:id="@+id/summary_text_view"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_view_detail"
            app:layout_constraintTop_toTopOf="@+id/image_view_detail"
            tools:text="@string/summary_placeholder" />

        <!--Movie Date Label-->
        <TextView
            android:id="@+id/date_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/date_label"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_detail"
            app:layout_constraintTop_toBottomOf="@+id/summary_text_view" />

        <!--Movie Date-->
        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="28dp"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/date_label_text_view"
            app:layout_constraintStart_toEndOf="@+id/date_label_text_view"
            app:layout_constraintTop_toTopOf="@+id/date_label_text_view"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/date_placeholder" />

        <!--Movie Rating Label-->
        <TextView
            android:id="@+id/rating_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/rating_label"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/date_label_text_view"
            app:layout_constraintTop_toBottomOf="@+id/date_label_text_view" />

        <!--Movie Rating-->
        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/rating_label_text_view"
            app:layout_constraintTop_toBottomOf="@+id/date_text_view"
            tools:text="@string/rating_placeholder" />

        <!--Favorite Button-->
        <Button
            android:id="@+id/favorite_button"
            android:layout_width="70dp"
            android:layout_height="34dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/favorite_text"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/trailers_button"
            app:layout_constraintTop_toBottomOf="@+id/image_view_detail" />

        <!--Trailers Button-->
        <Button
            android:id="@+id/trailers_button"
            android:layout_width="70dp"
            android:layout_height="34dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/trailer_text"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_detail" />

        <!--Movie Reviews Label-->
        <TextView
            android:id="@+id/reviews_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/reviews_label"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_detail" />

        <!--Movie Review-->
        <TextView
            android:id="@+id/reviews_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/secondaryTextColor"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_label_text_view"
            tools:text="@string/movie_reviews" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

